# pyrestruct

./: .gitignore  LICENCE  pyproject.toml  readme.rst
.github/workflows/: publish.yml
restruct/: __init__.py  restruct.py
tests/: test_restruct.py
