[project]
name = "pyrestruct"
version = "0.1.0"
description = "Packing and unpacking between bytes and classes"
requires-python = ">=3.11"
authors = [
    {name = "Nicolai Sommervold", email="nicolai.sommervold@gmail.com"}
]
readme = "readme.rst"

[project.optional-dependencies]

dev = [
    "pytest~=8.1.1",
    "black~=24.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--ignore=lib",
    "--ignore=lib64",
]

[tool.hatch.build.targets.wheel]
packages = ["restruct"]